--- a/week1.ipynb
+++ b/week1.ipynb
@@ -26,7 +26,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  }
+  },
+  "toc-showcode": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
